finished section to er-2-neo4j

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -1,6 +1,8 @@
 % !TeX spellcheck = en_US
 \documentclass[12pt, a4paper, titlepage]{book}
 \usepackage[a4paper, margin=3cm]{geometry}
+%\setlength{\parindent}{0pt}
+%\setlength{\parskip}{14pt plus 5mm minus 4mm}
 
 \usepackage[utf8]{inputenc}% erm\"oglich die direkte Eingabe der Umlaute 
 \usepackage[T1]{fontenc} % das Trennen der Umlaute
@@ -12,6 +14,12 @@
 \usepackage{graphicx}
 \usepackage{color}
 \usepackage{caption}
+\usepackage{comment} 
+
+% set date format
+\usepackage[style=iso]{datetime2}
+%\usepackage[yyyymmdd]{datetime}
+%\renewcommand{\dateseparator}{--}
 
 \input{shortcuts.tex}
 
