rephrased some headlines

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -23,7 +23,7 @@
 
 \input{shortcuts.tex}
 
-\title{Conception and prototype implementation of a storage solution for multi-versioned simulation models in systems biology}
+\title{Conception and Prototype Implementation of a storage solution for Models with multiple Versions}
 \author{Martin Peters\\[12pt]
 	\small Department of Systems Biology and Bioinformatics\\
 	\small University of Rostock}
@@ -47,7 +47,7 @@
 	\chapter{Results}
 	\input{results.tex}
 	
-	\chapter{Implementation}
+	\chapter{Implementation of the Prototype}
 	\input{implementation.tex}
 	
 	\chapter{Discussion}
