--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -41,6 +41,8 @@
 \todo{last paragraph of motivation is goals section, summarizing proposed solution}
 \todo{research gap ausarbeiten}
 \todo{look into MOST for stats regarding model versions}
+
+\section{Objectives}
 \begin{itemize}
 \item develop a concept to support different versions in model databases
 	\subitem \todo{mention masymos directly?}
