changed cite-style to apalike

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -58,7 +58,7 @@
 	
 	%\bibliography{ba-thesis.bib}
 	\bibliography{zotero.bib}
-	\bibliographystyle{alpha}
+	\bibliographystyle{apalike}
 	
 	\begin{appendix}
 		\listoffigures
