added todo to produce difference figure, showing diff between concept and impl

--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -1,7 +1,7 @@
 \section{Overall system architecture and services}
 \begin{itemize}
 	\item cf. \ref{fig:system-overview}
-	\item \todo{highlight the differences between optimal (proposed) infrstructure and the implementation}
+	\item \todo{highlight the differences between optimal (proposed) infrastructure and the implementation}
 \end{itemize}
 
 \begin{figure}[h]
