--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -1,6 +1,7 @@
 \todo{concrete, low-level stuff}
 \todo{what was used, version numbers, etc.}
 \todo{pretty short, every subproject gets a section}
+\todo{add figure showing differences of concept and implementation, regarding figure \ref{fig:system-overview}}
 
 \section{ModelCrawler}
 	\todo{to be decided}
