added appendix file for including source files in the appendix

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -15,6 +15,7 @@
 \usepackage{color}
 \usepackage{caption}
 \usepackage{comment} 
+\usepackage{listings}
 
 % set date format
 \usepackage[style=iso]{datetime2}
@@ -62,5 +63,8 @@
 	
 	\begin{appendix}
 		\listoffigures
+		
+		\chapter*{Appendix}
+		\input{appendix.tex}
 	\end{appendix}
 \end{document}
