--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -5,7 +5,7 @@
 \end{itemize}
 
 \begin{figure}[h]
-	\center
+	\centering
 	\includegraphics[width=\textwidth]{resources/system-overview-matrix.pdf}
 	\caption{Infrastructure overview}
 	\label{fig:system-overview}
@@ -23,6 +23,13 @@
 	\subitem higher storage consumption
 \item extended storage model
 \end{itemize}
+
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{resources/db-concept-er.pdf}
+	\caption{ER model of the proposed database schema}
+	\label{fig:db-er-model}
+\end{figure}
 
 \begin{figure}[h]
 	\includegraphics[width=\textwidth]{resources/db_structure.jpg}
