--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -468,4 +468,67 @@ of the compendium concept itself.},
   file = {McCullough et al. - 2008 - Do economics journal archives promote replicable r.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/TPU867MM/McCullough et al. - 2008 - Do economics journal archives promote replicable r.pdf:application/pdf}
 }
 
+@article{Ashburner2000,
+  title = {Gene {{Ontology}}: Tool for the Unification of Biology},
+  volume = {25},
+  issn = {1061-4036},
+  shorttitle = {Gene {{Ontology}}},
+  doi = {10.1038/75556},
+  abstract = {Genomic sequencing has made it clear that a large fraction of the genes specifying the core biological functions are shared by all eukaryotes. Knowledge of the biological role of such shared proteins in one organism can often be transferred to other organisms. The goal of the Gene Ontology Consortium is to produce a dynamic, controlled vocabulary that can be applied to all eukaryotes even as knowledge of gene and protein roles in cells is accumulating and changing. To this end, three independent ontologies accessible on the World-Wide Web (http://www.geneontology.org) are being constructed: biological process, molecular function and cellular component.},
+  timestamp = {2016-09-08T15:55:53Z},
+  number = {1},
+  urldate = {2016-09-08},
+  url = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3037419/},
+  journal = {Nature genetics},
+  author = {Ashburner, Michael and Ball, Catherine A. and Blake, Judith A. and Botstein, David and Butler, Heather and Cherry, J. Michael and Davis, Allan P. and Dolinski, Kara and Dwight, Selina S. and Eppig, Janan T. and Harris, Midori A. and Hill, David P. and Issel-Tarver, Laurie and Kasarskis, Andrew and Lewis, Suzanna and Matese, John C. and Richardson, Joel E. and Ringwald, Martin and Rubin, Gerald M. and Sherlock, Gavin},
+  month = may,
+  year = {2000},
+  pages = {25--29},
+  file = {PubMed Central Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/NFQMRXEK/Ashburner et al. - 2000 - Gene Ontology tool for the unification of biology.pdf:application/pdf},
+  pmid = {10802651},
+  pmcid = {PMC3037419}
+}
+
+@article{Gennari2011,
+  title = {Multiple Ontologies in Action: Composite Annotations for Biosimulation Models},
+  volume = {44},
+  issn = {1532-0480},
+  shorttitle = {Multiple Ontologies in Action},
+  doi = {10.1016/j.jbi.2010.06.007},
+  abstract = {There now exists a rich set of ontologies that provide detailed semantics for biological entities of interest. However, there is not (nor should there be) a single source ontology that provides all the necessary semantics for describing biological phenomena. In the domain of physiological biosimulation models, researchers use annotations to convey semantics, and many of these annotations require the use of multiple reference ontologies. Therefore, we have developed the idea of composite annotations that access multiple ontologies to capture the physics-based meaning of model variables. These composite annotations provide the semantic expressivity needed to disambiguate the often-complex features of biosimulation models, and can be used to assist with model merging and interoperability. In this paper, we demonstrate the utility of composite annotations for model merging by describing their use within SemGen, our semantics-based model composition software. More broadly, if orthogonal reference ontologies are to meet their full potential, users need tools and methods to connect and link these ontologies. Our composite annotations and the SemGen tool provide one mechanism for leveraging multiple reference ontologies.},
+  language = {eng},
+  timestamp = {2016-09-08T15:56:04Z},
+  number = {1},
+  journal = {Journal of Biomedical Informatics},
+  author = {Gennari, John H. and Neal, Maxwell L. and Galdzicki, Michal and Cook, Daniel L.},
+  month = feb,
+  year = {2011},
+  keywords = {Anatomy,Biomedical Research,Computer Simulation,Databases; Factual,Documentation,Humans,Models; Biological,Semantics,Software},
+  pages = {146--154},
+  file = {1-s2.0-S1532046410000924-main.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/QEFMCXCF/1-s2.0-S1532046410000924-main.pdf:application/pdf},
+  pmid = {20601121},
+  pmcid = {PMC2989341}
+}
+
+@article{Smith2007,
+  title = {The {{OBO Foundry}}: Coordinated Evolution of Ontologies to Support Biomedical Data Integration},
+  volume = {25},
+  copyright = {\textcopyright 2007 Nature Publishing Group},
+  issn = {1087-0156},
+  shorttitle = {The {{OBO Foundry}}},
+  doi = {10.1038/nbt1346},
+  abstract = {The value of any kind of data is greatly enhanced when it exists in a form that allows it to be integrated with other data. One approach to integration is through the annotation of multiple bodies of data using common controlled vocabularies or 'ontologies'. Unfortunately, the very success of this approach has led to a proliferation of ontologies, which itself creates obstacles to integration. The Open Biomedical Ontologies (OBO) consortium is pursuing a strategy to overcome this problem. Existing OBO ontologies, including the Gene Ontology, are undergoing coordinated reform, and new ontologies are being created on the basis of an evolving set of shared principles governing ontology development. The result is an expanding family of ontologies designed to be interoperable and logically well formed and to incorporate accurate representations of biological reality. We describe this OBO Foundry initiative and provide guidelines for those who might wish to become involved.},
+  language = {en},
+  timestamp = {2016-09-08T15:58:02Z},
+  number = {11},
+  urldate = {2016-09-08},
+  url = {http://www.nature.com/nbt/journal/v25/n11/full/nbt1346.html},
+  journal = {Nature Biotechnology},
+  author = {Smith, Barry and Ashburner, Michael and Rosse, Cornelius and Bard, Jonathan and Bug, William and Ceusters, Werner and Goldberg, Louis J. and Eilbeck, Karen and Ireland, Amelia and Mungall, Christopher J. and Leontis, Neocles and Rocca-Serra, Philippe and Ruttenberg, Alan and Sansone, Susanna-Assunta and Scheuermann, Richard H. and Shah, Nigam and Whetzel, Patricia L. and Lewis, Suzanna},
+  month = nov,
+  year = {2007},
+  pages = {1251--1255},
+  file = {Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/GWV3IFPE/Smith et al. - 2007 - The OBO Foundry coordinated evolution of ontologi.pdf:application/pdf;Snapshot:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/JUJHF2EU/nbt1346.html:text/html}
+}
+
 
