--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -96,7 +96,71 @@
   author = {Scharm, Martin and Wolkenhauer, Olaf and Waltemath, Dagmar},
   year = {2015},
   pages = {btv484},
-  annote = {Extracted Annotations (8/19/2016, 3:23:40 PM)"steadily increasing number of computational models are available from open repositories" (Scharm et al 2015:1)"repositories provide the infrastructure necessary to maintain model code and associated metadata" (Scharm et al 2015:1)"distribution of models through these repositories accelerates collaborative research and encourages model reuse" (Scharm et al 2015:1)"Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user" (Scharm et al 2015:1)"The need of model version control has been emphasized repeatedly on several occasions (Li et al., 2010; Miller et al., 2011; Saffrey and Orton, 2009; Waltemath et al., 2013a)" (Scharm et al 2015:1)"relation between versions of a model from different releases can be considered the history of the model's encoding" (Scharm et al 2015:2)"In the simplest case, the history follows a single line along the time axis. In practice, however, models are subject to modifications, including corrections, extension and other refinements" (Scharm et al 2015:2)"during model development, several alternatives are tested, leading to different paths in the history of a mode" (Scharm et al 2015:2)"especially when branches with different modifications shall be merged back into a single version of the model at a later time" (Scharm et al 2015:2)"For this reason, difference detection plays a key role in model version control" (Scharm et al 2015:2)"We refer to model provenance as the field of research that investigates the nature of differences in model versions, seeking answers to the seven W-questions: Who, What, Where, Why, When, Which, With (How)?" (Scharm et al 2015:2)"novel algorithm for difference detection in models of biological systems" (Scharm et al 2015:2)"pre-processes the model documents, maps the hierarchical model structures and post-processes the resulting mappings" (Scharm et al 2015:2)"mapping can then be exported in both machine and human readable formats" (Scharm et al 2015:2)"algorithm is implemented in a software library called BiVeS" (Scharm et al 2015:2)"It distinguishes six major steps:" (Scharm et al 2015:2)"Pre-processing the XML documents" (Scharm et al 2015:2)"Mapping the hierarchical structures" (Scharm et al 2015:2)"Post-processing the resulting mapping" (Scharm et al 2015:2)"Based on the identified mapping, the algorithm computes a delta" (Scharm et al 2015:2)"delta can be converted" (Scharm et al 2015:2)"two versions of an XML-encoded model are translated into an internal tree structure. For every node n in the tree, a hash sum n r and a weight n x are calculated" (Scharm et al 2015:2)"The weight of a node is thus always greater than the weight of its children. As such, the weight represents the size of the corresponding subtree" (Scharm et al 2015:2)"The hash sum of a node n represents the signature of the subtree rooted at n" (Scharm et al 2015:2)"While n r unambiguously defines the subtree rooted in n, n r does not need to be unique among all nodes in the tree. Thus, if n r \textonequarter m r then the subtrees in n and m are identically equal" (Scharm et al 2015:2)"First, nodes are being mapped with respect to their identifiers" (Scharm et al 2015:2)"id attributes in the XML documents serve as identifiers. In addition, we also evaluate biological identifiers, specifically links into bio-ontologies" (Scharm et al 2015:2)"Second, the initial mapping is propagated upwards into the trees." (Scharm et al 2015:3)"The connections of a node's children are evaluated in a depth-first traversal of T 2 . If a node n in T 2 is connected to a node m in T 1 then a mapping of parent\dh{}n\TH to parent\dh{}m\TH is suggested" (Scharm et al 2015:3)"If, in contrast, n is not connected, we examine the candidates that were previously suggested by the connections of n's children." (Scharm et al 2015:3)"andidates which have a different tag name than n and candidates which already have a connection are neglected." (Scharm et al 2015:3)"Among the remaining candidates, the algorithm chooses the one that received the best suggestions and connects it to n" (Scharm et al 2015:3)"Third, the algorithm makes use of the initially computed signatures and maps nodes of T 2 on nodes of T 1" (Scharm et al 2015:3)"A priority queueU is maintained to sort the nodes of T 2 based on their weights. Initially,U only consists of the root node of T 2 ." (Scharm et al 2015:3)"UnlessU is empty, the algorithm repeatedly removes node n2U T 2 with the biggest weight, which represents the biggest subtree in the queue" (Scharm et al 2015:3)"Fourth, the algorithm improves the quality of the mapping by examining the network structure of T 1 and T 2 in a top-down approach. For every mapping n2 T 2 on m2 T 1 , it compares unmatched children of n and m to find missed mappings" (Scharm et al 2015:3)"The algorithm evaluates the matrix greedily and adds new mappings up to a maximum distance of 0.9. Thus, nodes which have nothing in common will not be connected" (Scharm et al 2015:3)"Additional mapping rules capture the domain characteristics of the processed data. Following the current specifications for SBML and CellML, we prohibit certain changes in the hierarchical tree of document nodes. Specifically, we treat parts of the model as atomic constructs for which we define restrictions on possible network operations" (Scharm et al 2015:3)"This step is a major reason why our algorithm outperforms standard XML diff algorithms." (Scharm et al 2015:3)"insert if an entity is present in T 2 but absent in T" (Scharm et al 2015:3)"delete if an entity is present in T 1 but absent in T" (Scharm et al 2015:3)"move if a node is present in both documents, but either (i) the parents in the corresponding trees are not connected or (ii) the parents are connected, but the sequence of their siblings has changed" (Scharm et al 2015:3)"update if the value of an attribute, a text node's content or the tag name of a node was modified" (Scharm et al 2015:3)"After the mapping, we distinguish two types of nodes: mapped nodes and unmapped nodes. Unmapped nodes n2 T 1 [ T 2 are nodes for which the algorithm could not find a matching node in the opposite tree. These nodes and their attributes correspond to either inserts or deletes, depending on their origin" (Scharm et al 2015:3)"In contrast, mapped nodes are nodes for which the algorithm did find a matching node in the opposite tree. If the parents of such a mapping of n2 T 2 onto m2 T 1 are not connected, or if the sequence among their siblings has changed, then these nodes are included in the set of moves" (Scharm et al 2015:3)"Models are continuously modified. Consequently, new versions of a model are regularly being generated" (Scharm et al 2015:4)"We observe three major steps in model development that result in new versions" (Scharm et al 2015:4)"during the design phase" (Scharm et al 2015:4)"during curation and error correction" (Scharm et al 2015:4)"with updates of the format specification" (Scharm et al 2015:4)"BiVeS detects the differences between model versions" (Scharm et al 2015:4)"BiVeS communicates the differences" (Scharm et al 2015:4)"Reproducibility of model-based scientific results has gained increasing attention" (Scharm et al 2015:5)"Indeed, the ability to reproduce results is a basic requirement for the advance of science" (Scharm et al 2015:5)"comparability of models and their versions. Model provenance and version control enable the widespread use and application of models, saving time and efforts during development" (Scharm et al 2015:7) However, the reuse of models requires the accessibility and comparability of models and their versions. Model provenance andversion control enable the widespread use and application of mod-els, saving time and efforts during development (note on p.7)"Support for version control, however, is still limited." (Scharm et al 2015:7)"Such a combined system stores model versions and detects the differences between them. In addition, it offers support for understanding these changes and filtering them according to the users' preferences, as discussed in the following." (Scharm et al 2015:7)"Its major advantages over existing solutions for biological models are as follows: (i) it recognizes the models' hierarchical structures; (ii) it ignores white spaces, such as indentation, which generally do not affect the model's behaviour and (iii) it ignores the specific order of attributes in an entity. Additional post-processing rules capture the domain characteristics of the processed data and increase the significance of produced deltas. Currently, these rules are static" (Scharm et al 2015:7)"BiVeS helps grasping the changes" (Scharm et al 2015:7)"We are currently working on refining these filters using an ontology for differences. We envision that this ontology, together with tools for semi-automatic annotation, will help reduce the number of displayed changes to the ones that are meaningful or requested by the user" (Scharm et al 2015:7)"Current limitations with respect to output formats are missing support for the SBGN format and suitable graphical representations of models that do not specify a reaction network" (Scharm et al 2015:7)"Improving the reuse of computational models through version control" (Scharm et al 2015:8)},
+  annote = {Extracted Annotations (8/19/2016, 3:23:40 PM)
+"steadily increasing number of computational models are available from open repositories" (Scharm et al 2015:1)
+"repositories provide the infrastructure necessary to maintain model code and associated metadata" (Scharm et al 2015:1)
+"distribution of models through these repositories accelerates collaborative research and encourages model reuse" (Scharm et al 2015:1)
+"Tracking the evolution of a model, that is providing information about changes in the model and its encoding, plays an important role in supporting the user" (Scharm et al 2015:1)
+"The need of model version control has been emphasized repeatedly on several occasions (Li et al., 2010; Miller et al., 2011; Saffrey and Orton, 2009; Waltemath et al., 2013a)" (Scharm et al 2015:1)
+"relation between versions of a model from different releases can be considered the history of the model's encoding" (Scharm et al 2015:2)
+"In the simplest case, the history follows a single line along the time axis. In practice, however, models are subject to modifications, including corrections, extension and other refinements" (Scharm et al 2015:2)
+"during model development, several alternatives are tested, leading to different paths in the history of a mode" (Scharm et al 2015:2)
+"especially when branches with different modifications shall be merged back into a single version of the model at a later time" (Scharm et al 2015:2)
+"For this reason, difference detection plays a key role in model version control" (Scharm et al 2015:2)
+"We refer to model provenance as the field of research that investigates the nature of differences in model versions, seeking answers to the seven W-questions: Who, What, Where, Why, When, Which, With (How)?" (Scharm et al 2015:2)
+"novel algorithm for difference detection in models of biological systems" (Scharm et al 2015:2)
+"pre-processes the model documents, maps the hierarchical model structures and post-processes the resulting mappings" (Scharm et al 2015:2)
+"mapping can then be exported in both machine and human readable formats" (Scharm et al 2015:2)
+"algorithm is implemented in a software library called BiVeS" (Scharm et al 2015:2)
+"It distinguishes six major steps:" (Scharm et al 2015:2)
+"Pre-processing the XML documents" (Scharm et al 2015:2)
+"Mapping the hierarchical structures" (Scharm et al 2015:2)
+"Post-processing the resulting mapping" (Scharm et al 2015:2)
+"Based on the identified mapping, the algorithm computes a delta" (Scharm et al 2015:2)
+"delta can be converted" (Scharm et al 2015:2)
+"two versions of an XML-encoded model are translated into an internal tree structure. For every node n in the tree, a hash sum n r and a weight n x are calculated" (Scharm et al 2015:2)
+"The weight of a node is thus always greater than the weight of its children. As such, the weight represents the size of the corresponding subtree" (Scharm et al 2015:2)
+"The hash sum of a node n represents the signature of the subtree rooted at n" (Scharm et al 2015:2)
+"While n r unambiguously defines the subtree rooted in n, n r does not need to be unique among all nodes in the tree. Thus, if n r \textonequarter m r then the subtrees in n and m are identically equal" (Scharm et al 2015:2)
+"First, nodes are being mapped with respect to their identifiers" (Scharm et al 2015:2)
+"id attributes in the XML documents serve as identifiers. In addition, we also evaluate biological identifiers, specifically links into bio-ontologies" (Scharm et al 2015:2)
+"Second, the initial mapping is propagated upwards into the trees." (Scharm et al 2015:3)
+"The connections of a node's children are evaluated in a depth-first traversal of T 2 . If a node n in T 2 is connected to a node m in T 1 then a mapping of parent\dh{}n\TH to parent\dh{}m\TH is suggested" (Scharm et al 2015:3)
+"If, in contrast, n is not connected, we examine the candidates that were previously suggested by the connections of n's children." (Scharm et al 2015:3)
+"andidates which have a different tag name than n and candidates which already have a connection are neglected." (Scharm et al 2015:3)
+"Among the remaining candidates, the algorithm chooses the one that received the best suggestions and connects it to n" (Scharm et al 2015:3)
+"Third, the algorithm makes use of the initially computed signatures and maps nodes of T 2 on nodes of T 1" (Scharm et al 2015:3)
+"A priority queueU is maintained to sort the nodes of T 2 based on their weights. Initially,U only consists of the root node of T 2 ." (Scharm et al 2015:3)
+"UnlessU is empty, the algorithm repeatedly removes node n2U T 2 with the biggest weight, which represents the biggest subtree in the queue" (Scharm et al 2015:3)
+"Fourth, the algorithm improves the quality of the mapping by examining the network structure of T 1 and T 2 in a top-down approach. For every mapping n2 T 2 on m2 T 1 , it compares unmatched children of n and m to find missed mappings" (Scharm et al 2015:3)
+"The algorithm evaluates the matrix greedily and adds new mappings up to a maximum distance of 0.9. Thus, nodes which have nothing in common will not be connected" (Scharm et al 2015:3)
+"Additional mapping rules capture the domain characteristics of the processed data. Following the current specifications for SBML and CellML, we prohibit certain changes in the hierarchical tree of document nodes. Specifically, we treat parts of the model as atomic constructs for which we define restrictions on possible network operations" (Scharm et al 2015:3)
+"This step is a major reason why our algorithm outperforms standard XML diff algorithms." (Scharm et al 2015:3)
+"insert if an entity is present in T 2 but absent in T" (Scharm et al 2015:3)
+"delete if an entity is present in T 1 but absent in T" (Scharm et al 2015:3)
+"move if a node is present in both documents, but either (i) the parents in the corresponding trees are not connected or (ii) the parents are connected, but the sequence of their siblings has changed" (Scharm et al 2015:3)
+"update if the value of an attribute, a text node's content or the tag name of a node was modified" (Scharm et al 2015:3)
+"After the mapping, we distinguish two types of nodes: mapped nodes and unmapped nodes. Unmapped nodes n2 T 1 [ T 2 are nodes for which the algorithm could not find a matching node in the opposite tree. These nodes and their attributes correspond to either inserts or deletes, depending on their origin" (Scharm et al 2015:3)
+"In contrast, mapped nodes are nodes for which the algorithm did find a matching node in the opposite tree. If the parents of such a mapping of n2 T 2 onto m2 T 1 are not connected, or if the sequence among their siblings has changed, then these nodes are included in the set of moves" (Scharm et al 2015:3)
+"Models are continuously modified. Consequently, new versions of a model are regularly being generated" (Scharm et al 2015:4)
+"We observe three major steps in model development that result in new versions" (Scharm et al 2015:4)
+"during the design phase" (Scharm et al 2015:4)
+"during curation and error correction" (Scharm et al 2015:4)
+"with updates of the format specification" (Scharm et al 2015:4)
+"BiVeS detects the differences between model versions" (Scharm et al 2015:4)
+"BiVeS communicates the differences" (Scharm et al 2015:4)
+"Reproducibility of model-based scientific results has gained increasing attention" (Scharm et al 2015:5)
+"Indeed, the ability to reproduce results is a basic requirement for the advance of science" (Scharm et al 2015:5)
+"comparability of models and their versions. Model provenance and version control enable the widespread use and application of models, saving time and efforts during development" (Scharm et al 2015:7)
+ However, the reuse of models requires the accessibility and comparability of models and their versions. Model provenance andversion control enable the widespread use and application of mod-els, saving time and efforts during development (note on p.7)
+~
+"Support for version control, however, is still limited." (Scharm et al 2015:7)
+"Such a combined system stores model versions and detects the differences between them. In addition, it offers support for understanding these changes and filtering them according to the users' preferences, as discussed in the following." (Scharm et al 2015:7)
+"Its major advantages over existing solutions for biological models are as follows: (i) it recognizes the models' hierarchical structures; (ii) it ignores white spaces, such as indentation, which generally do not affect the model's behaviour and (iii) it ignores the specific order of attributes in an entity. Additional post-processing rules capture the domain characteristics of the processed data and increase the significance of produced deltas. Currently, these rules are static" (Scharm et al 2015:7)
+"BiVeS helps grasping the changes" (Scharm et al 2015:7)
+"We are currently working on refining these filters using an ontology for differences. We envision that this ontology, together with tools for semi-automatic annotation, will help reduce the number of displayed changes to the ones that are meaningful or requested by the user" (Scharm et al 2015:7)
+"Current limitations with respect to output formats are missing support for the SBGN format and suitable graphical representations of models that do not specify a reaction network" (Scharm et al 2015:7)
+"Improving the reuse of computational models through version control" (Scharm et al 2015:8)},
   file = {Attachment:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/ZXCMJSDU/Bioinformatics-2016-Scharm-563-70.pdf:application/pdf}
 }
 
@@ -529,6 +593,37 @@ of the compendium concept itself.},
   year = {2007},
   pages = {1251--1255},
   file = {Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/GWV3IFPE/Smith et al. - 2007 - The OBO Foundry coordinated evolution of ontologi.pdf:application/pdf;Snapshot:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/JUJHF2EU/nbt1346.html:text/html}
+}
+
+@article{Prinz2011,
+  title = {Believe It or Not: How Much Can We Rely on Published Data on Potential Drug Targets?},
+  volume = {10},
+  copyright = {\textcopyright 2011 Nature Publishing Group},
+  issn = {1474-1776},
+  shorttitle = {Believe It or Not},
+  doi = {10.1038/nrd3439-c1},
+  language = {en},
+  timestamp = {2016-09-12T11:42:18Z},
+  number = {9},
+  urldate = {2016-09-12},
+  url = {http://www.nature.com/nrd/journal/v10/n9/full/nrd3439-c1.html},
+  journal = {Nature Reviews Drug Discovery},
+  author = {Prinz, Florian and Schlange, Thomas and Asadullah, Khusru},
+  month = sep,
+  year = {2011},
+  pages = {712--712},
+  file = {Full Text PDF:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/8PJM3GH5/Prinz et al. - 2011 - Believe it or not how much can we rely on publish.pdf:application/pdf;Snapshot:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/P8DMUQ8R/nrd3439-c1.html:text/html}
+}
+
+@misc{Bergmann2014,
+  title = {{{COMBINE Archive Specification Version}} 1},
+  language = {eng},
+  timestamp = {2016-09-12T13:20:09Z},
+  url = {http://co.mbine.org/specifications/omex.version-1.pdf},
+  author = {Bergmann, Frank T and Rodriguez, Nicolas and {Le Nov{\`e}re}, Nicolas},
+  month = sep,
+  year = {2014},
+  file = {COMBINE Archive Specification - omex.version-1.pdf:/users/stud00/mp487/.zotero/zotero/jp6zq2jc.default/zotero/storage/WRXE92NH/omex.version-1.pdf:application/pdf}
 }
 
 
