finished description of ER diagram

--- a/tex/background.tex
+++ b/tex/background.tex
@@ -115,7 +115,8 @@
 	\todo{cite owl standard, when explaining comodi import}
 	\todo{http://msb.embopress.org/content/7/1/543.short for ontology overview}
 	
-	\subsection{COMODI}
+	\subsection{\comodi}
+	\label{sec:background:comodi}
 	\begin{itemize}
 		\item cf. \cite{Scharm2016}
 		\item  They clarify the intended semantics of the data, which makes the data more accessible, sharable, and interoperable 
