--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -13,6 +13,7 @@
 
 \newcommand{\masymos}{MaSyMoS\xspace}
 \newcommand{\bives}{BiVeS\xspace}
+\newcommand{\comodi}{COMODI\xspace}
 \newcommand{\neoj}{neo4j\xspace}
 
 \newcommand{\sysbio}{System Biology\xspace}
