formulated/drafted intro

--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -10,6 +10,7 @@
 \newcommand{\numl}{NuML\xspace}
 \newcommand{\combine}{COMBINE\xspace}
 \newcommand{\ca}{\combine~archive\xspace}
+\newcommand{\sbml}{SBML\xspace}
 
 \newcommand{\masymos}{MaSyMoS\xspace}
 \newcommand{\bives}{BiVeS\xspace}
