splitted background into 2 chapters, according th meeting with olaf

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -39,8 +39,11 @@
 	%\dw{This a is comment from Dagmar}
 	\input{introduction.tex}
 	
-	\chapter{Background}
-	\input{background.tex}
+	\chapter{Difference detection and its challenges for System Biological Models}
+	\input{background-diff.tex}
+	
+	\chapter{Repositories for System Biological Models}
+	\input{background-repos.tex}
 	
 	\chapter{Conceptual Architecture}
 	\input{concept.tex}
