--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -11,6 +11,8 @@
 \newcommand{\combine}{COMBINE\xspace}
 \newcommand{\ca}{\combine~archive\xspace}
 \newcommand{\sbml}{SBML\xspace}
+\newcommand{\cellml}{CellML\xspace}
+\newcommand{\xml}{XML}
 
 \newcommand{\masymos}{MaSyMoS\xspace}
 \newcommand{\bives}{BiVeS\xspace}
