post meeting commit

--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -76,7 +76,7 @@ Whereby in \cellml the \texttt{MODEL} node links to components, which again cont
 \begin{figure}
 	\centering
 	\includegraphics[height=150pt]{resources/masymos_struc_figure2.eps}
-	\caption{Structure representing \sbml and \cellml models in \masymos}
+	\caption{Structure representing \sbml and \cellml models in \masymos \cite{Henkel2015}}
 	\label{fig:background:graph-db:masymos}
 \end{figure}
 
