--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -1,3 +1,4 @@
+% !TeX spellcheck = en_US
 \section{Overall system architecture and services}
 \begin{itemize}
 	\item cf. \ref{fig:system-overview}
@@ -39,7 +40,8 @@ In contrast a \texttt{DiffDelete} links to \emph{Version A} with \texttt{old\_en
 
 Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}, which again can be hierarchical relating to another \texttt{OntologyTerm}. Those terms are taken from the \comodi ontology \cite{Scharm2016}, cf. section \ref{sec:background:comodi}.
 
-
+\todo{add table (or similar) of all entities and relations in the appendix}
+\todo{make visible, that ER model is just a sub-ER}
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{resources/db-concept-er.pdf}
