--- a/tex/discussion.tex
+++ b/tex/discussion.tex
@@ -3,4 +3,8 @@
 	\item Benchmarks/stats on database
 		\subitem additional overhead (nodes/relations increase)
 	\item How to improve database/reduce overhead
+	\item 2 branches of \comodi unused
+		\subitem because of automatic generation
+		\subitem reason and intention not able to be automatically determined
+		\subitem possible extension?
 \end{itemize}
