--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -12,7 +12,8 @@
 \newcommand{\ca}{\combine~archive\xspace}
 \newcommand{\sbml}{SBML\xspace}
 \newcommand{\cellml}{CellML\xspace}
-\newcommand{\xml}{XML}
+\newcommand{\xml}{XML\xspace}
+\newcommand{\owl}{OWL\xspace}
 
 \newcommand{\masymos}{MaSyMoS\xspace}
 \newcommand{\bives}{BiVeS\xspace}
